Colocando imagem de leão estatica no html

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <body>
         <div class="container">
             <h1 class="text-center">Alurapic</h1>
+            <img class="img-responsive center-block" src="http://www.fundosanimais.com/Minis/leoes.jpg" alt="Leão">
         </div> <!-- fim container -->        
     </body>
 </html>
