Fazendo a imagem aparecer utilizando um controller e passando um model para a view

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <script src="js/lib/angular.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/controllers/fotos-controller.js"></script>
     </head>
-    <body>
+    <body ng-controller="FotosController">
         <div class="container">
             <h1 class="text-center">Alurapic</h1>
-            <img class="img-responsive center-block" src="http://www.fundosanimais.com/Minis/leoes.jpg" alt="Leão">
+            <img class="img-responsive center-block" src="{{foto.url}}" alt="{{foto.titulo}}">
         </div> <!-- fim container -->        
     </body>
 </html>
