--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
             <div class="jumbotron">
                 <h1 class="text-center">Alurapic</h1>
             </div>
-            <div class="panel panel-default">
+            <div ng-repeat="foto in fotos" class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">{{foto.titulo}}</h3>
                 </div>
