Adicionando Elementos persolizados com directive

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <script src="js/lib/angular.min.js"></script>
         <script src="js/main.js"></script>
         <script src="js/controllers/fotos-controller.js"></script>
+        <script src="js/directives/minhas-diretivas.js"></script>
     </head>
     <body ng-controller="FotosController">
         <div class="container">
@@ -16,12 +17,9 @@
                 <h1 class="text-center">Alurapic</h1>
             </div>
             <div ng-repeat="foto in fotos" class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">{{foto.titulo}}</h3>
-                </div>
-                <div class="panel-body">
+                <meu-painel titulo="{{foto.titulo}}">
                     <img class="img-responsive center-block" src="{{foto.url}}" alt="{{foto.titulo}}">
-                </div>
+                </meu-painel>      
             </div>   <!-- fimdo panel -->  
         </div> <!-- fim container -->        
     </body>
