--- a/public/js/directives/meu-painel.html
+++ b/public/js/directives/meu-painel.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title">{{titulo}}</h3>
+        <h3 class="panel-title">{{titulo}}</h3> <!-- Esse atributo titulo deve vir da diretiva -->
     </div>
     <div class="panel-body" ng-transclude><!-- O atributo ng-transclude diz que os filhos inseridos no html serão filhos dessa div-->
     </div>
