Adicionando uma animação, usando as pseudoclasses do angular

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
         <title>Alurapic</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/efeitos.css">
         <script src="js/lib/angular.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/lib/angular-animate.min.js"></script>
         <script src="js/controllers/fotos-controller.js"></script>
         <script src="js/directives/minhas-diretivas.js"></script>
     </head>
@@ -20,17 +22,20 @@
             <div class="row">
                 <div class="col-md-12">
                     <form>
-                        <input ng-model="filtro" class="form-control" placeholder="filtrar"><!-- ng-model é bidirecional se alterar o valor aqui altera no controller -->
+                        <input ng-model="filtro" ng-model-options="{debounce: 500}" 
+                               class="form-control" placeholder="filtrar"><!-- ng-model é bidirecional se alterar o valor aqui altera no controller, ng--model-options debounce é para ele atualizar o valor com um delay de 500 milisegundos -->
                     </form>
                 </div>
             </div>
             
             <div class="row">
-                <div ng-repeat="foto in fotos | filter: filtro" class="panel panel-default col-md-2">
-                    <meu-painel titulo="{{foto.titulo}}">
+                
+                    <meu-painel ng-repeat="foto in fotos | filter: filtro"
+                                titulo="{{foto.titulo}}" 
+                                class="col-md-2 painel-animado">
                         <img class="img-responsive center-block" src="{{foto.url}}" alt="{{foto.titulo}}">
                     </meu-painel>      
-                </div>   <!-- fimdo panel -->  
+                  <!-- fimdo panel -->  
             </div>
         </div> <!-- fim container -->        
     </body>
