--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         <script src="js/main.js"></script>
         <script src="js/lib/angular-animate.min.js"></script>
         <script src="js/lib/angular-route.min.js"></script>
+        <script src="js/lib/angular-resource.min.js"></script>
         <script src="js/controllers/fotos-controller.js"></script>
         <script src="js/controllers/foto-controller.js"></script>
         <script src="js/controllers/grupos-controller.js"></script>
